# eda.oracle_adr_alertmanager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  galaxy.yml  package.json  pyproject.toml
.github.wip/workflows/: python-ci.yml
.github/actions/ansible-test/: action.yml
.github/actions/ci-setup/: action.yml
.github/actions/python-setup/: action.yml
.github/actions/python-test/: action.yml
.github/workflows/: auto-tagging.yml  build-and-ship.yml  build.yml  python-ci.yml  release.yml  tag.yml
build_docsite/: conf.py
docs/rst/: index.rst
docs/rst/event_sources/: oracle_adr_alertmanager.rst
meta/: plugin_extra.yml  runtime.yml
plugins/: __init__.py
plugins/event_source/: __init__.py  oracle_adr_alertmanager.py
rulebooks/: demo_rulebook.yml
tests/integration/: test_oracle_adr_alertmanager.py
tests/sanity/: ignore-2.19.txt
tests/unit/: test_oracle_adr_alertmanager.py
