[project]
name = "oracle-adr-alertmanager"
version = "0.1.0"
description = "Event-Driven Ansible: Oracle Automatic Diagnostic Repository alertmanager"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Jérôme Witt", email = "jerome.witt@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

dependencies = [
  "ansible-core>=2.19",
  "ansible-rulebook>=1.2",
  "aiofiles>=25.1.0",
]

[dependency-groups]
dev = [
  "types-aiofiles",
  "types-PyYAML",
  "pytest",
  "pytest-asyncio",
  "pytest-xdist",
  "pyyaml",
  "ruff",
  "mypy",
  "pylint",
  "black",
  "pre-commit",
  "antsibull-docs",
  "sphinx-ansible-theme",
  "commitizen",
]

[project.urls]
"Homepage" = "https://github.com/jewdba/oracle_adr_alertmanager"
"Bug Tracker" = "https://github.com/jewdba/oracle_adr_alertmanager/issues"

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["plugins*"]

# -----------------------------
# uv dependency management
# -----------------------------
[tool.uv]
default-groups = "all"

# -----------------------------
# Mypy settings
# -----------------------------
[tool.mypy]
strict = true
show_error_codes = true

# -----------------------------
# Black settings
# -----------------------------
[tool.black]
line-length = 150
target-version = ["py312"]

# -----------------------------
# Ruff settings
# -----------------------------
[tool.ruff]
line-length = 150
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]  # Use of assert in test files

# -----------------------------
# Pylint
# -----------------------------
[tool.pylint.'FORMAT']
max-line-length = 150

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "R0903",  # Too few public methods
]

# -----------------------------
# Pytest settings
# -----------------------------
[tool.pytest.ini_options]
addopts = "-v"


# -----------------------------
# Conventional commits
# -----------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.8.3"
tag_format = "v$version"
update_changelog_on_bump = true
version_scheme = "semver"